--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ possible in VR
 	
 	
 		<video width="100%" height="100%" controls>
-		  <source src="Game.mp4" type="video/mp4">
+		  <source src="PC.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video>
 
