--- a/index.html
+++ b/index.html
@@ -261,6 +261,15 @@ possible in VR
             <h3> <i class="fas fa-phone"></i>+27 82 835 5397 </h3>
            
         </div>
+	<iframe
+	src="https://viewer.jig.space/?jig=6G62yX3G&step=1&sbox=1&autoload=1&autoplay=1&stepdelay=5"
+	width="640" height="360" allow="fullscreen; xr-spatial-tracking;" allowfullscreen="" frameborder="0">
+	 </iframe>
+	<p style="color: #000;"><a href="https://link.jig.space/QFQhQRWf8xb?utm_medium=embed&utm_campaign=sharing" target="_blank" 
+			   style="color: #304de4;">VHT-1_Veritech_Hover_Tank in augmented reality</a> powered by 
+	<a href="https://www.jig.space?utm_medium=embed&utm_campaign=sharing&utm_content=6G62yX3G" target="_blank" style="color: #304de4;">JigSpace
+	</a>
+	    </p>
 
     </div>
 
