--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ possible in VR
                 <h3> Virtual Reality Developer</h3>
             </div>
 
-            <h4>June 2022 - February 2023</h4>
+            <h4>June 2022 - Present</h4>
             
             <div class="info">
                 <h3> I use 3D modelling and object scripting to develop interactive Virtual 
@@ -266,9 +266,9 @@ possible in VR
         <br> <br>
 
         <div class="info">
-            <h3> <i class="fas fa-user"></i>Mr Tebogo Letswalo  </h3>
-			<h3> <i class="fas fa-briefcase"></i>Project Manager (X-Reality Lab)</h3>
-            <h3> <i class="fas fa-envelope"></i> tletswalo.tlj@gmail.com </h3>
+            <h3> <i class="fas fa-user"></i>Mr Skosana Xolani  </h3>
+			<h3> <i class="fas fa-briefcase"></i>Managing Director (X-Reality Lab)</h3>
+            <h3> <i class="fas fa-envelope"></i> xolani@xrlab.co.za </h3>
             <h3> <i class="fas fa-phone"></i>+27 82 835 5397 </h3>
            
         </div>
