changed duration of X reality lab

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ possible in VR
                 <h3> Virtual Reality Developer</h3>
             </div>
 
-            <h4>June 2022 - Present</h4>
+            <h4>June 2022 - February 2023</h4>
             
             <div class="info">
                 <h3> I use 3D modelling and object scripting to develop interactive Virtual 
