--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@ possible in VR
         <br> <br>
 
         <div class="info">
-            <h3> <i class="fas fa-user"></i>Mr Skosana Xolani  </h3>
-			<h3> <i class="fas fa-briefcase"></i>Managing Director (X-Reality Lab)</h3>
-            <h3> <i class="fas fa-envelope"></i> xolani@xrlab.co.za </h3>
+            <h3> <i class="fas fa-user"></i>Mr Tebogo Lesthwalo  </h3>
+			<h3> <i class="fas fa-briefcase"></i>Project Manager (X-Reality Lab)</h3>
+            <h3> <i class="fas fa-envelope"></i> jack@xrlab.co.za </h3>
             <h3> <i class="fas fa-phone"></i>+27 82 835 5397 </h3>
            
         </div>
