--- a/index.html
+++ b/index.html
@@ -47,13 +47,10 @@
 
     <h3>Hello,</h3>
     <h1>My name is <span> Siziwe Sithole</span></h1>
-    <p>Virtual Reality Developer with experience of designing and developing
-immersive virtual reality experiences, proficient in Unity, C#, and
-experience in 3D modeling and animation. Strong understanding of VR
-development best practices and user experience design. Proven ability
-to work collaboratively in a fast-paced environment, deliver highquality, and exceptional problem-solving skills. Passionate about
-exploring new technologies and pushing the boundaries of what is
-possible in VR
+    <p>Enthusiastic and skilled Unity Game Developer with 3 years of experience in creating immersive and engaging games. 
+	    Proficient in utilizing the Unity game engine and C# programming language to design and 
+	    develop games across multiple platforms. Adept at collaborating with multidisciplinary teams to bring innovative game concepts to life. 
+	    Strong problem-solving abilities and a passion for continuous learning in the dynamic field of game development.
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
@@ -71,8 +68,8 @@ possible in VR
 
     <div class="info">
         <h3> <span> name : </span> Siziwe Fortunate Sithole </h3>
-        <h3> <span> age : </span> 21 </h3>
-        <h3> <span> qualification : </span> National Diploma: IT (Multimedia) </h3>
+        
+        <h3> <span> qualification : </span> National Diploma: IT (Multimedia) & Multiplayer Virtual Reality Development With Unity</h3>
         <h3> <span> post : </span> Game Developer & 3D Designer </h3>
         <h3> <span> languages : </span> English, Xitsonga, Sepedi, IsiZulu & Setswana </h3>
     </div>
